Fix overflow item on print ref #182

--- a/assets/sass/print/print-general.scss
+++ b/assets/sass/print/print-general.scss
@@ -55,4 +55,8 @@ unbedingt Reihenfolge behalten
     }
   }
   .carousel-inner {overflow: visible;}
+  .scroll-y, .news-feed .scroll-y {
+    overflow: visible !important;
+    max-height: auto !important;
+  }
 }
